# SkriptR

./: .gitignore  Cargo.toml  README.md
ecs/: Cargo.toml
ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  world.rs
ecs/tests/: ecs_tests.rs  test_entity.rs
resa-renderer/: Cargo.toml
resa-renderer/src/: buffer.rs  core.rs  descriptors.rs  framebuffer.rs  graphics_pipeline.rs  helper.rs  image_buffer.rs  lib.rs  material.rs  material_controller.rs  mesh.rs  mesh_controller.rs  render_stage.rs  renderer.rs  renderpass.rs  shader.rs  swapchain.rs  uniform.rs  vertex.rs
resa-renderer/src/pipelines/: graphics_pipeline.rs  mod.rs  pipeline_builder.rs
resa-renderer/src/render_passes/: framebuffer.rs  mod.rs  render_pass.rs  render_pass_builder.rs
resa-renderer/src/render_passes_and_pipelines/: graphics_pipeline.rs  mod.rs  pipeline_builder.rs  render_pass.rs  render_pass_builder.rs
resa-renderer/src/render_resources/: material_controller.rs  material_library.rs  mesh_controller.rs  mesh_library.rs  mod.rs  shader_library.rs  texture_buffer_library.rs  texture_library.rs  uniform_buffer_library.rs
resa-ui/: Cargo.toml
resa-ui/src/: font.rs  font_library.rs  lib.rs  ui_element.rs
resources/materials/: material01.mat  material02.mat  material03.mat
resources/shaders/: base.frag  base.vert
src/: camera.rs  entity.rs  event.rs  main.rs  resa_app.rs  resource_loader.rs  test_anim.rs  transform.rs  window.rs
src/component/: entitiy_component.rs  mesh_renderer.rs  mod.rs  transform.rs
src/ecs/: mesh_renderer.rs  mod.rs  transform.rs
src/rendering/: buffers.rs  camera.rs  camera_system.rs  commands.rs  mesh.rs  mesh_renderer.rs  mod.rs  pass.rs  pipeline.rs  push_constants.rs  renderer.rs  tmp.rs  (+1 more)
(+6 files in other folders)
