[package]
name = "SkriptR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "~1.3.3"
serde = {version = "1.0.144", features = ["derive"]}
winit = "0.27.2"
rusttype = "0.9.3"
glm = "0.2.3"
resa-ecs = {path = "../SkriptR/ecs", version = "0.1.0"}
resa-renderer = {path = "../SkriptR/resa-renderer", version = "0.1.0"}
resa-ui = {path = "../SkriptR/resa-ui", version = "0.1.0"}